# BlackPineapple

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jease/pineapple/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/camera/: camera_fragment.glsl  camera_vertex.glsl
app/src/main/assets/shader/: base_fragment.glsl  base_vertex.glsl  gray_fragment.glsl  lookup_fragment.glsl
app/src/main/cpp/cmd_line/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c
app/src/main/cpp/common/: CommonTools.h
app/src/main/cpp/common/egl_core/: EglCore.cpp  EglCore.h
app/src/main/cpp/common/message/: Handler.cpp  Handler.h  MessageQueue.cpp  MessageQueue.h
app/src/main/cpp/gles/: RenderController.cpp  RenderController.h
app/src/main/cpp/video_record/common/: AudioFramePool.cpp  AudioFramePool.h  AudioFrameQueue.cpp  AudioFrameQueue.h  AudioPacketQueue.cpp  AudioPacketQueue.h  FramePool.h  VideoFramePool.cpp  VideoFramePool.h  VideoFrameQueue.cpp  VideoFrameQueue.h  VideoPacketQueue.cpp  VideoPacketQueue.h
app/src/main/cpp/video_record/encode/: FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.h  VideoEncoder.h
app/src/main/jni/: VideoStudio.cpp
app/src/main/res/anim/: slide_in_up.xml  slide_out_down.xml
app/src/main/res/color/: camera_tools_text_color.xml
app/src/main/res/drawable/: album_plachholder_shape.xml  btn_camera_selector.xml  camera_flash_btn_selector.xml  camera_switch_btn_selector.xml  common_close_selector.xml  filter_item_selector.xml  filter_menu_background_shape.xml  ic_add_a_photo_normal.xml  ic_add_a_photo_pressed.xml  ic_close_normal.xml  ic_close_pressed.xml  ic_compare_normal.xml  ic_compare_pressed.xml  ic_filter_normal.xml  ic_filter_pressed.xml  ic_flash_off.xml  ic_flash_on.xml  ic_switch_camera_normal.xml  ic_switch_camera_pressed.xml  ic_video_record.xml  icon_filter_selector.xml
app/src/main/res/layout/: activity_album.xml  activity_root.xml  fragment_album.xml  fragment_camera.xml  fragment_camera1.xml  fragment_camera_texture.xml  fragment_filter_menu.xml  fragment_main.xml  layout_album_item.xml  layout_camera_tools.xml  layout_filter_list_item.xml
app/src/main/res/values/: array.xml  attrs.xml  colors.xml  strings.xml
(+74 files in other folders)
